# martian_chess_engine

./: Cargo.toml
.github/workflows/: actions.yml
src/: board.rs  gen_tables.rs  lib.rs  main.rs  position.rs  search.rs  wasm_api.rs
www/: build.sh
www/src/: gen_assets.sh  index.html  index.js  martian_engine.js  styles.css
