[package]
name = "martian_engine"
version = "0.1.0"
authors = ["Nathan Koppel <nathankoppel0@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
packed_simd = { version = "0.3", package = "packed_simd_2", features = ["into_bits"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
lazy_static = "1.4"
wasm-timer = "0.2"
